--- a/fundamentos-react/src/index.css
+++ b/fundamentos-react/src/index.css
@@ -1,8 +1,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 2rem;
     background-color: midnightblue;
     color: white;
     text-align: center;
+}
+
+h1, h2 {
+    font-weight: 300;
 }
