--- a/fundamentos-react/src/index.css
+++ b/fundamentos-react/src/index.css
@@ -2,7 +2,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 1.4rem;
-    background-color: midnightblue;
+    background: #1488CC;
+    background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
+    background: linear-gradient(to right, #2B32B2, #1488CC); 
     color: white;
     text-align: center;
 }
